# NETT-local-experiment-fork

./: .gitignore  README.md  pyproject.toml
src/nett/: __init__.py  nett.py
src/nett/body/: __init__.py  builder.py
src/nett/body/wrappers/: dvs.py
src/nett/brain/: __init__.py  builder.py
src/nett/brain/encoders/: __init__.py  cnnlstm.py  dinov1.py  dinov2.py  frozensimclr.py  resnet10.py  resnet18.py  sam.py  vit.py
src/nett/brain/encoders/disembodied_models/: simclr.py
src/nett/brain/encoders/disembodied_models/archs/: resnet_1b.py  resnet_2b.py  resnet_3b.py  resnets.py
src/nett/environment/: builder.py
src/nett/services/: callbacks.py  environment.py  job.py  train.py
src/nett/utils/: analyze.py  callbacks.py  io.py  logger.py  side_channel_logger.py  unity_socket.py
src/nett/utils/callbacks/: hyperparams_callback.py  memory_callback.py  multi_bar_callback.py
